--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -210,6 +210,7 @@
   <ItemGroup>
     <Image Include="res\block1.bmp" />
     <Image Include="res\ClientBlock.bmp" />
+    <Image Include="res\marked.bmp" />
     <Image Include="res\MineSweeper.ico" />
     <Image Include="res\pressSmile.bmp" />
     <Image Include="res\smile.bmp" />
