--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -195,6 +195,7 @@
     <ClInclude Include="MineSweeperDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Timer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Mine.cpp" />
