--- a/MineSweeper.vcxproj.filters
+++ b/MineSweeper.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Data.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Timer.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MineSweeper.cpp">
