--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -211,6 +211,15 @@
   <ItemGroup>
     <Image Include="res\block1.bmp" />
     <Image Include="res\ClientBlock.bmp" />
+    <Image Include="res\detect1.bmp" />
+    <Image Include="res\detect2.bmp" />
+    <Image Include="res\detect3.bmp" />
+    <Image Include="res\detect4.bmp" />
+    <Image Include="res\detect5.bmp" />
+    <Image Include="res\detect6.bmp" />
+    <Image Include="res\detect7.bmp" />
+    <Image Include="res\detect8.bmp" />
+    <Image Include="res\DiedBlock.bmp" />
     <Image Include="res\marked.bmp" />
     <Image Include="res\MineSweeper.ico" />
     <Image Include="res\pressSmile.bmp" />
