--- a/MineSweeper.vcxproj.filters
+++ b/MineSweeper.vcxproj.filters
@@ -116,5 +116,11 @@
     <Image Include="res\DiedBlock.bmp">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="res\ClickedMine.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\Mine.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
